--- a/disaster_relief/template/relief_centers.html
+++ b/disaster_relief/template/relief_centers.html
@@ -244,7 +244,7 @@
     <!-- Custom Script for Map -->
     <script>
         // Initialize the map
-        var map = L.map('map').setView([51.505, -0.09], 13);
+        const map = L.map('map').setView([10.1073, 76.3636], 13); // Centered at Kerala, India
 
         // Add a tile layer (you can use any tile layer you prefer)
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
