--- a/disaster_relief/static/css/style.css
+++ b/disaster_relief/static/css/style.css
@@ -166,8 +166,7 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .85), rgba(0, 0, 0, .85)), url(../img/carousel-1.jpg) center center no-repeat;
-    background-size: cover;
+    background: linear-gradient(rgba(0, 0, 0, .100)
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
