--- a/disaster_relief/template/logistics.html
+++ b/disaster_relief/template/logistics.html
@@ -68,9 +68,8 @@
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
                         <a href="notifications" class="dropdown-item">Notifications</a>
-                        <a href="admin_dashboard" class="dropdown-item">Trash page</a>
                         <a href="logistics" class="dropdown-item active">Logistics</a>
-                        <a href="pagenotfound" class="dropdown-item">Error Page</a>
+                        <a href="error404" class="dropdown-item">World Map</a>
                     </div>
                 </div>
                 <a href="report" class="nav-item nav-link">Report</a>
